# RackVM

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
assembler/: CMakeLists.txt  Makefile  assembler.cpp  assembler.hpp  common.hpp  encoder.cpp  encoder.hpp  example.txt  example_errors.txt  label.cpp  label.hpp
compiler/: CMakeLists.txt  code_generator.cpp  code_generator.hpp  compiler.cpp  compiler.hpp  lexer.cpp  lexer.hpp  lexer.l  parser.yy  test.rack  test_simple.rack  types.hpp
compiler/include/: cli_args.hpp
examples/asm/: add.asm
experiment/: genfig.py
experiment/data/GCC/O0/br/: out_20220417_200525.txt  out_20220418_201254.txt  raw_20220417_200525.csv  raw_20220418_201254.csv
experiment/data/GCC/O0/bs/: out_20220417_200145.txt  out_20220418_200526.txt  raw_20220417_200145.csv  raw_20220418_200526.csv
experiment/data/GCC/O0/ur/: out_20220417_201744.txt  out_20220418_202619.txt  raw_20220417_201744.csv  raw_20220418_202619.csv
experiment/data/GCC/O0/us/: out_20220417_200809.txt  out_20220418_201807.txt  raw_20220417_200809.csv  raw_20220418_201807.csv
experiment/data/GCC/O1/br/: out_20220417_193847.txt  out_20220418_194230.txt  raw_20220417_193847.csv  raw_20220418_194230.csv
experiment/data/GCC/O1/bs/: out_20220417_193459.txt  out_20220418_193649.txt  raw_20220417_193459.csv  raw_20220418_193649.csv
experiment/data/GCC/O1/ur/: out_20220417_195213.txt  out_20220418_195644.txt  raw_20220417_195213.csv  raw_20220418_195644.csv
experiment/data/GCC/O1/us/: out_20220417_194540.txt  out_20220418_195052.txt  raw_20220417_194540.csv  raw_20220418_195052.csv
experiment/data/GCC/O3/br/: out_20220417_202541.txt  out_20220418_191646.txt  raw_20220417_202541.csv  raw_20220418_191646.csv
experiment/data/GCC/O3/bs/: out_20220417_202302.txt  out_20220418_191121.txt  raw_20220417_202302.csv  raw_20220418_191121.csv
experiment/data/GCC/O3/ur/: out_20220417_203332.txt  out_20220418_192654.txt  raw_20220417_203332.csv  raw_20220418_192654.csv
experiment/data/GCC/O3/us/: out_20220417_202837.txt  out_20220418_192221.txt  raw_20220417_202837.csv  raw_20220418_192221.csv
rack/examples/: test.rack
rack/stdlib/: string.rack
vm/: CMakeLists.txt  Makefile  opcodes.h  register_impl.h  shared_impl.h  stack_impl.h  vm.c  vm_memory.c  vm_memory.h
vm/benchmarks/: circles.asm  circles_r.asm  circles_s.asm
vm/decoding-exp/: CMakeLists.txt  decoding_experiment.c
